--- a/src/main/resources/com/vertex/vos/assets/style.css
+++ b/src/main/resources/com/vertex/vos/assets/style.css
@@ -52,7 +52,7 @@
 
 
 .non-editable {
-    -fx-background-color:  #fff;
+    -fx-background-color: white;
     -fx-border-color: linear-gradient(to right, -var-primary-color, -var-accent-color);
     -fx-border-radius: 30px;
     -fx-background-radius: 30px;
