--- a/src/main/resources/com/vertex/vos/SalesOrderList.fxml
+++ b/src/main/resources/com/vertex/vos/SalesOrderList.fxml
@@ -14,8 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesOrderListController">
+<BorderPane fx:id="borderPane" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesOrderListController">
    <center>
       <TableView fx:id="orderTable" BorderPane.alignment="CENTER">
          <columnResizePolicy>
