--- a/src/main/resources/com/vertex/vos/SalesOrderForm.fxml
+++ b/src/main/resources/com/vertex/vos/SalesOrderForm.fxml
@@ -18,15 +18,14 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-
-<BorderPane fx:id="borderPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesOrderFormController">
+<BorderPane fx:id="borderPane" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesOrderFormController">
    <stylesheets>
       <URL value="@assets/style.css" />
       <URL value="@assets/table.css" />
       <URL value="@assets/global.css" />
    </stylesheets>
    <top>
-      <BorderPane BorderPane.alignment="CENTER">
+      <BorderPane>
          <top>
             <BorderPane BorderPane.alignment="TOP_LEFT">
                <center>
@@ -151,35 +150,58 @@
       </BorderPane>
    </top>
    <center>
-      <TableView fx:id="salesOrderTableView" BorderPane.alignment="CENTER">
-         <columns>
-            <TableColumn prefWidth="75.0" text="Product">
+      <BorderPane BorderPane.alignment="CENTER">
+         <center>
+            <TableView fx:id="salesOrderTableView">
                <columns>
-                  <TableColumn fx:id="productCodeCol" prefWidth="75.0" text="Code" />
-                  <TableColumn fx:id="productNameCol" prefWidth="75.0" text="Name" />
-                  <TableColumn fx:id="productUnitCol" prefWidth="75.0" text="Unit" />
+                  <TableColumn prefWidth="75.0" text="Product">
+                     <columns>
+                        <TableColumn fx:id="productCodeCol" prefWidth="75.0" text="Code" />
+                        <TableColumn fx:id="productNameCol" prefWidth="75.0" text="Name" />
+                        <TableColumn fx:id="productUnitCol" prefWidth="75.0" text="Unit" />
+                     </columns>
+                  </TableColumn>
+                  <TableColumn prefWidth="75.0" text="Quantities">
+                     <columns>
+                        <TableColumn fx:id="orderedQuantityCol" prefWidth="75.0" text="Ordered" />
+                        <TableColumn fx:id="servedQuantityCol" prefWidth="75.0" text="Served" />
+                     </columns>
+                  </TableColumn>
+                  <TableColumn fx:id="discountTypeCol" prefWidth="75.0" text="Discount Type" />
+                  <TableColumn prefWidth="75.0" text="Amounts">
+                     <columns>
+                        <TableColumn fx:id="priceCol" prefWidth="75.0" text="Price" />
+                        <TableColumn fx:id="grossCol" prefWidth="75.0" text="Gross" />
+                        <TableColumn fx:id="discountCol" prefWidth="75.0" text="Discount" />
+                        <TableColumn fx:id="netCol" prefWidth="75.0" text="Net" />
+                     </columns>
+                  </TableColumn>
                </columns>
-            </TableColumn>
-            <TableColumn prefWidth="75.0" text="Quantities">
-               <columns>
-                  <TableColumn fx:id="orderedQuantityCol" prefWidth="75.0" text="Ordered" />
-                  <TableColumn fx:id="servedQuantityCol" prefWidth="75.0" text="Served" />
-               </columns>
-            </TableColumn>
-            <TableColumn fx:id="discountTypeCol" prefWidth="75.0" text="Discount Type" />
-            <TableColumn prefWidth="75.0" text="Amounts">
-               <columns>
-                  <TableColumn fx:id="priceCol" prefWidth="75.0" text="Price" />
-                  <TableColumn fx:id="grossCol" prefWidth="75.0" text="Gross" />
-                  <TableColumn fx:id="discountCol" prefWidth="75.0" text="Discount" />
-                  <TableColumn fx:id="netCol" prefWidth="75.0" text="Net" />
-               </columns>
-            </TableColumn>
-         </columns>
-         <columnResizePolicy>
-            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-         </columnResizePolicy>
-      </TableView>
+               <columnResizePolicy>
+                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+               </columnResizePolicy>
+            </TableView>
+         </center>
+         <bottom>
+            <BorderPane BorderPane.alignment="CENTER">
+               <left>
+                  <GridPane styleClass="grid-pane" BorderPane.alignment="CENTER">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label text="Items : " />
+                        <Label fx:id="itemSizeLabel" text="0" GridPane.columnIndex="1" />
+                     </children>
+                  </GridPane>
+               </left>
+            </BorderPane>
+         </bottom>
+      </BorderPane>
    </center>
    <bottom>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
