--- a/src/main/resources/com/vertex/vos/SalesOrderForm.fxml
+++ b/src/main/resources/com/vertex/vos/SalesOrderForm.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="borderPane" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesOrderFormController">
+<BorderPane fx:id="borderPane" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesOrderFormController">
    <stylesheets>
       <URL value="@assets/style.css" />
       <URL value="@assets/table.css" />
@@ -31,6 +31,12 @@
                <center>
                   <HBox spacing="5.0">
                      <children>
+                        <VBox>
+                           <children>
+                              <Label text="Customer Ref." />
+                              <TextField fx:id="poNoField" />
+                           </children>
+                        </VBox>
                         <VBox>
                            <children>
                               <Label text="Supplier" />
@@ -49,27 +55,31 @@
                      </BorderPane.margin>
                   </HBox>
                </center>
-               <left>
-                  <Label fx:id="orderNo" styleClass="header" text="orderno" BorderPane.alignment="CENTER" />
-               </left>
                <right>
                   <HBox BorderPane.alignment="CENTER">
                      <children>
                         <VBox>
                            <children>
                               <Label text="Date Created" />
-                              <DatePicker fx:id="dateCreatedField" />
+                              <DatePicker fx:id="dateCreatedField" editable="false" />
                            </children>
                         </VBox>
                         <VBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0">
                            <children>
                               <Label text="Order Date" />
-                              <DatePicker fx:id="orderDateField" />
+                              <DatePicker fx:id="orderDateField" focusTraversable="false" />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
                </right>
+               <top>
+                  <HBox style="-fx-spacing: 5;" BorderPane.alignment="TOP_LEFT">
+                     <children>
+                        <Label fx:id="orderNo" styleClass="header" text="orderno" />
+                     </children>
+                  </HBox>
+               </top>
             </BorderPane>
          </top>
          <padding>
@@ -125,13 +135,13 @@
                   <VBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="10.0">
                      <children>
                         <Label text="Delivery Date" />
-                        <DatePicker fx:id="deliveryDateField" />
+                        <DatePicker fx:id="deliveryDateField" editable="false" showWeekNumbers="true" />
                      </children>
                   </VBox>
                   <VBox alignment="TOP_RIGHT" layoutX="10.0" layoutY="65.0">
                      <children>
                         <Label text="Due Date" />
-                        <DatePicker fx:id="dueDateField" />
+                        <DatePicker fx:id="dueDateField" editable="false" />
                      </children>
                   </VBox>
                </children>
@@ -156,6 +166,8 @@
                <columns>
                   <TableColumn prefWidth="75.0" text="Product">
                      <columns>
+                        <TableColumn fx:id="productBrandCol" prefWidth="75.0" text="Brand" />
+                        <TableColumn fx:id="productCategoryCol" prefWidth="75.0" text="Category" />
                         <TableColumn fx:id="productCodeCol" prefWidth="75.0" text="Code" />
                         <TableColumn fx:id="productNameCol" prefWidth="75.0" text="Name" />
                         <TableColumn fx:id="productUnitCol" prefWidth="75.0" text="Unit" />
@@ -168,14 +180,7 @@
                      </columns>
                   </TableColumn>
                   <TableColumn fx:id="discountTypeCol" prefWidth="75.0" text="Discount Type" />
-                  <TableColumn prefWidth="75.0" text="Amounts">
-                     <columns>
-                        <TableColumn fx:id="priceCol" prefWidth="75.0" text="Price" />
-                        <TableColumn fx:id="grossCol" prefWidth="75.0" text="Gross" />
-                        <TableColumn fx:id="discountCol" prefWidth="75.0" text="Discount" />
-                        <TableColumn fx:id="netCol" prefWidth="75.0" text="Net" />
-                     </columns>
-                  </TableColumn>
+                  <TableColumn fx:id="priceCol" prefWidth="75.0" text="Price" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
