--- a/src/main/resources/com/vertex/vos/InternalOperationsContent.fxml
+++ b/src/main/resources/com/vertex/vos/InternalOperationsContent.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
 
-<ScrollPane fitToHeight="true" fitToWidth="true" styleClass="contentBackground" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.InternalOperationsContentController">
+<ScrollPane fitToHeight="true" fitToWidth="true" styleClass="contentBackground" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.InternalOperationsContentController">
    <content>
       <VBox style="-fx-padding: 20;">
          <children>
@@ -28,7 +28,7 @@
                 </HBox>
                 <TilePane fx:id="tilePane" hgap="20.0" prefColumns="3" vgap="20.0">
                     <children>
-                        <VBox fx:id="openReceiving" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                        <VBox fx:id="openReceiving" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                             <children>
                                 <HBox alignment="CENTER" prefWidth="164.0" spacing="10.0">
                                     <children>
@@ -52,7 +52,7 @@
                                 </DropShadow>
                             </effect>
                         </VBox>
-                        <VBox fx:id="openSalesOrder" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                        <VBox fx:id="openSalesOrder" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                             <children>
                                 <HBox alignment="CENTER" spacing="10.0">
                                     <children>
@@ -76,7 +76,7 @@
                                 </DropShadow>
                             </effect>
                         </VBox>
-                        <VBox fx:id="openSalesInvoice" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                        <VBox fx:id="openSalesInvoice" alignment="CENTER_LEFT" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
                             <children>
                                 <HBox alignment="CENTER" spacing="10.0">
                                     <children>
@@ -158,30 +158,6 @@
                                             </image>
                                         </ImageView>
                                         <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Logistics" wrapText="true" />
-                                    </children>
-                                </HBox>
-                            </children>
-                            <padding>
-                                <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
-                            </padding>
-                            <effect>
-                                <DropShadow>
-                                    <color>
-                                        <Color opacity="0.5" />
-                                    </color>
-                                </DropShadow>
-                            </effect>
-                        </VBox>
-                        <VBox fx:id="openTripSummary" alignment="CENTER_LEFT" maxWidth="200.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
-                            <children>
-                                <HBox alignment="CENTER" spacing="10.0">
-                                    <children>
-                                        <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                                            <image>
-                                                <Image url="@assets/icons/Summary List.png" />
-                                            </image>
-                                        </ImageView>
-                                        <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Trip Summary" wrapText="true" />
                                     </children>
                                 </HBox>
                             </children>
@@ -374,6 +350,30 @@
                                  </image>
                               </ImageView>
                               <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Bad Order Stock Transfer" wrapText="true" />
+                           </children>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="30.0" left="15.0" right="15.0" top="30.0" />
+                     </padding>
+                     <effect>
+                        <DropShadow>
+                           <color>
+                              <Color opacity="0.5" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                  </VBox>
+                  <VBox fx:id="openConsolidation" alignment="CENTER_LEFT" layoutX="450.0" layoutY="642.0" spacing="30.0" style="-fx-background-color: white; -fx-background-radius: 20px;" styleClass="text">
+                     <children>
+                        <HBox alignment="CENTER" spacing="10.0">
+                           <children>
+                              <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@assets/icons/Trolley.png" />
+                                 </image>
+                              </ImageView>
+                              <Label style="-fx-font-size: 17px; -fx-text-fill: linear-gradient(to right, #155d99, #5A90CF);" styleClass="text-title-logo" stylesheets="@assets/global.css" text="Consolidation" wrapText="true" />
                            </children>
                         </HBox>
                      </children>
