--- a/src/main/resources/com/vertex/vos/ConsolidationList.fxml
+++ b/src/main/resources/com/vertex/vos/ConsolidationList.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<BorderPane prefHeight="600.0" prefWidth="800.0" style="-fx-padding: 5;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.ConsolidationListController">
+<BorderPane fx:id="borderPane" prefHeight="600.0" prefWidth="800.0" style="-fx-padding: 5;" stylesheets="@assets/style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.ConsolidationListController">
    <center>
       <TableView fx:id="consolidationTable" BorderPane.alignment="CENTER">
          <columnResizePolicy>
